# x-post-reader

./: LICENSE  README.md  pyproject.toml
tests/: test_reader.py
x_post_reader/: __init__.py  __main__.py  reader.py
