[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "x-post-reader"
version = "0.1.0"
description = "Read public X/Twitter post text through the oEmbed API."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "dnzj007", email = "8039346@qq.com" }
]
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.scripts]
x-post-reader = "x_post_reader.__main__:main"

[tool.setuptools]
packages = ["x_post_reader"]
